--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,11 +5,11 @@
 
 <div id="carousel-food" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
-  <ol class="carousel-indicators">
+ <!--  <ol class="carousel-indicators">
     <li data-target="#carousel-food" data-slide-to="0" class="active"></li>
     <li data-target="#carousel-food" data-slide-to="1"></li>
     <li data-target="#carousel-food" data-slide-to="2"></li>
-  </ol>
+  </ol> -->
 
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
@@ -25,11 +25,11 @@
   </div>
 
   <!-- Controls -->
-  <a class="left carousel-control" href="#carousel-food" data-slide="prev">
+  <!-- <a class="left carousel-control" href="#carousel-food" data-slide="prev">
     <span class="glyphicon glyphicon-chevron-left"></span>
   </a>
   <a class="right carousel-control" href="#carousel-food" data-slide="next">
     <span class="glyphicon glyphicon-chevron-right"></span>
-  </a>
+  </a> -->
 </div>
 </div>
