updated formatting on carousel

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,16 +1,19 @@
-.item{
-  background-size: cover;
-  background-position: 50% 50%;
-  width: 100%;
-  height: 100%;
-  margin-left: auto;
-  margin-right: auto;
-}
 
 .carousel-inner {
   /* make sure your .items will get correct height */
   height: 100%;
+  width: 100%;
+  margin: 0!important
 }
 
+.carousel,.item,.active{
+   height:100%;
+   width: 100%;
+   padding:0!important;
+ }
 
+.carousel-slide {
+  padding-top:10px;
+  padding-bottom: 10px;
+}
 // Specific CSS for your home-page
