--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,11 +3,15 @@
 <div id="carousel-food" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
     <div class="item active">
-      <%= cl_image_tag('tacos.png', :width=>1600, :crop=>"scale") %>
+      <%= cl_image_tag('tacos.png', width: 1600, height: 500, :crop=>"scale") %>
     </div>
     <div class="item">
-      <%= cl_image_tag("salad.jpg", :width=>1600, :crop=>"scale") %>
+      <%= cl_image_tag("salad.jpg", width: 1600, height: 500, :crop=>"scale") %>
     </div>
   </div>
+  </div>
+
+  <div class="btn-container">
+    <button class="btn btn-warning center-block">Book Now</button>
   </div>
 </div>
