added photos from client, updated story and formatting

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -61,8 +61,15 @@
   }
 }
 
-.story-subhead{
+.story {
+  display: flex;
+}
+
+.story {
+  margin-top: 50px;
+  h3{
   margin-bottom: 20px;
+  }
 }
 
 .head-story h1{
