--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,10 +3,13 @@
 <div id="carousel-food" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
     <div class="item active">
-      <%= cl_image_tag('tacos.png', width: 1600, height: 700, :crop=>"scale") %>
+  <%= cl_image_tag("tacosrb.jpg", :height => 500, :width=>1600, :crop=>"scale") %>
     </div>
     <div class="item">
-      <%= cl_image_tag("salad.jpg", width: 1600, height: 700, :crop=>"scale") %>
+      <%= cl_image_tag("taco_close.jpg", :height => 500, :width=>1600, :crop=>"scale") %>
+    </div>
+    <div class="item">
+      <%= cl_image_tag("vegs.jpg", :height => 500, :width=>1600, :crop=>"scale") %>
     </div>
   </div>
   </div>
@@ -20,14 +23,16 @@
     <div class="head-story">
       <h1>Authentic Tacos and Mexican Food</h1>
     </div>
-    <div class="story-subhead">
-      <h3>The Rio Story</h3>
-    </div>
     <div class="story">
-      <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
-        <br><br>
-
-      There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.</p>
+      <div>
+      <%= cl_image_tag("IMG-20180826-WA0001.jpg", :height=>500, :crop=>"scale") %>
+      </div>
+      <div class="story-subhead">
+        <h3>The Rio Story</h3>
+      <p>My inspiration is drawn from my passion towards food and my native Mexico.  With a Culinary degree and and experience as a Chef in various restaurants, I would like to present you with food from the heart like no other.
+      Fresh homemade items, slowly cooked and served with delicious homemade corn tortillas.
+      Allow us to host any event from birthday parties, business lunches, to even weddings.  We can modify our menu to your needs and make your event a total success.</p>
+    </div>
     </div>
   </div>
   </div>
