added footer and fb, insta icons

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -24,10 +24,10 @@
       <h1>Authentic Tacos and Mexican Food</h1>
     </div>
     <div class="story">
-      <div>
+      <div class="fernando">
       <%= cl_image_tag("IMG-20180826-WA0001.jpg", :height=>500, :crop=>"scale") %>
       </div>
-      <div class="story-subhead">
+      <div>
         <h3>The Rio Story</h3>
       <p>My inspiration is drawn from my passion towards food and my native Mexico.  With a Culinary degree and and experience as a Chef in various restaurants, I would like to present you with food from the heart like no other.
       Fresh homemade items, slowly cooked and served with delicious homemade corn tortillas.
