--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -69,6 +69,7 @@
   margin-top: 50px;
   h3{
   margin-bottom: 20px;
+  font-size: 1.4em;
   }
 }
 
@@ -78,6 +79,24 @@
 .fernando {
   border-radius: 5px;
   box-shadow: 5px;
+}
+
+.gallery-container {
+  position: relative;
+  width: 100%;
+}
+
+.gallery-container .btn-warning {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  font-size: 16px;
+  padding: 12px 24px;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
 }
 
 // Specific CSS for your home-page
